--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
   },
   "plugins": ["react", "prettier", "import"],
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "linebreak-style": [0, "unix"],
     "quotes": ["error", "single"],
@@ -42,6 +42,8 @@
     "react/sort-comp": "off",
     "no-await-in-loop": "off",
     "react/forbid-prop-types": "off",
+    "import/prefer-default-export": "off",
+    "default-param-last": "off",
     "import/order": [
       2,
       {
